--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <!-- 
     - primary meta tags
   -->
-  <title>SattarBakhash - Great coffee good vibes</title>
-  <meta name="title" content="SattarBakhash - Great coffee good vibes">
-  <meta name="description" content="This is a coffee shop html template made by Syed Faraz">
+  <title>THE COFFEE SHOP</title>
+  <meta name="title" content="THE COFFEE SHOP">
+  <meta name="description" content="This is a coffee shop html template ">
 
   <!-- 
     - favicon
