--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          Copyright © 2023 Syed Faraz. All Rights Reserved.
+          Copyright © 2024. All Rights Reserved.
         </p>
 
       </div>
